--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -32,7 +32,7 @@
         <div class="container-aside-list">
             <label for="employee">Payroll Management</label>
             <div class="container-aside-list-dropdown <%if(url === '/payroll'){%> active <% }%>  ">
-                <a href="#">
+                <a href="/payroll">
                     <i class="fa-solid fa-receipt"></i>
                     <label for="">Payment</label>
                 </a>
