--- a/views/Employees.ejs
+++ b/views/Employees.ejs
@@ -20,7 +20,7 @@
                             <table class="employee-table">
                                 <tr>
                                     <th>ID</th>
-                                    <th>Employee ID</th>
+                                    <th>Employee Code</th>
                                     <th>Name</th>
                                     <th>Age</th>
                                     <th>Email</th>
