update: fixed some code structure and logics

--- a/views/Employees.ejs
+++ b/views/Employees.ejs
@@ -31,7 +31,7 @@
                                 <% Object.values(data.emp).forEach(user => { %> 
                                     <tr>
                                         <td><%=user._id%></td>
-                                        <td><%=user.employee_id%></td>
+                                        <td><%=user.emp_code%></td>
                                         <td><%=user.name%></td>
                                         <td><%=user.age%></td>
                                         <td><%=user.email%></td>
