--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -14,7 +14,7 @@
         <div class="container-aside-list">
             <label for="employee">Dashboard</label>
             <div class="container-aside-list-dropdown <%if(url === '/'){%> active <% }%>  ">
-                <a href="/">
+                <a href="/admin/">
                     <i class="fa-solid fa-chart-bar"></i>
                     <label for="">Dashboard</label>
                 </a>
@@ -23,7 +23,7 @@
         <div class="container-aside-list">
             <label for="employee">Employee Management</label>
             <div class="container-aside-list-dropdown <%if(url === '/employees'){%> active <% }%>   ">
-                <a href="/employees">
+                <a href="/admin/employees">
                     <i class="fa-solid fa-user"></i>
                     <label for="">Employees</label>
                 </a>
@@ -32,7 +32,7 @@
         <div class="container-aside-list">
             <label for="employee">Payroll Management</label>
             <div class="container-aside-list-dropdown <%if(url === '/payroll'){%> active <% }%>  ">
-                <a href="/payroll">
+                <a href="/admin/payroll">
                     <i class="fa-solid fa-receipt"></i>
                     <label for="">Payment</label>
                 </a>
@@ -41,7 +41,7 @@
         <div class="container-aside-list">
             <label for="payroll">Attendance Management</label>
             <div class="container-aside-list-dropdown">
-                <a href="/records">
+                <a href="/admin/records">
                     <i class="fa-solid fa-calendar-check"></i>
                     <label for="">Records</label>
                 </a>
