--- a/views/Signup.ejs
+++ b/views/Signup.ejs
@@ -1,9 +1,9 @@
 <%-include('partials/Header')%>
 <div class="container-auth">
     <div class='head-banner'>
-        <img class="head-banner-bfar-bg" src='img/coralbacknew1.png'/>
-        <img class="head-banner-bfar-text" src='img/text.png'/>
-        <img class="head-banner-bfar-logo" src='img/bfar-logo.png' />
+        <img class="head-banner-bfar-bg" src='/img/coralbacknew1.png'/>
+        <img class="head-banner-bfar-text" src='/img/text.png'/>
+        <img class="head-banner-bfar-logo" src='/img/bfar-logo.png' />
     </div>
     <div class='main-auth'>
         <div class='auth-title'>
@@ -47,7 +47,7 @@
         const password = form.password.value
         const role = ddl.value
         try{
-            const res = await fetch(`/register`, {
+            const res = await fetch(`/admin/register`, {
                 headers: {'Content-Type': 'application/json'},
                 body: JSON.stringify({email, password, role}),
                 method: 'POST'
@@ -63,7 +63,7 @@
                 if(data.user.role === "admin"){
                     location.assign('/')
                 }else{
-                    location.assign('/logout')
+                    location.assign('/admin/logout')
                 }
             }
             
