--- a/views/TimeMonitoring.ejs
+++ b/views/TimeMonitoring.ejs
@@ -13,89 +13,32 @@
                                 <label for="time">
                                     <%=currentTime%>
                                 </label>
-                                
+
                             </div>
                         </div>
                         <form>
                             <div class="attendance-component box-shadow components">
-                                <label for="">Enter Employee ID</label>
                                 <select name="time_type" id="time_type">
                                     <option value="timein">Time In</option>
                                     <option value="timeout">Time Out</option>
                                 </select>
-                                <label for="error" class="employee error">ASDASDAS</label>
-                                <input type="text" name="empid" placeholder="Enter Employee ID">
+                                <label for="">Scan your id here:</label>
+                                <input type="text" name="empid" class="emp_id" placeholder="Enter Employee ID" onblur="this.focus()" autofocus autocomplete="off"/>
+                                <label for="error" class="employee error"></label>
                                 <button class="button-submit">Submit</button>
                             </div>
                         </form>
                         <div class="attendance-component box-shadow components">
                             <div class="alt box-shadow">
-                                <label for="alt" class="alt-label"> Or scan by RFID</label>
+                                <label for="alt" class="alt-label"> </label>
                             </div>
                         </div>
 
                     </div>
                 </div>
             </main>
-
-            <script>
-                const form = document.querySelector('form');
-                const d = document.querySelector('.date')
-                const t = document.querySelector('.time')
-                const lblError = document.querySelector('label.employee.error')
-                const altCon = document.querySelector('.alt')
-                const altLbl = document.querySelector('.alt-label')
-                const btnSubmit = document.querySelector('.button-submit')
-                const date = new Date()
-
-                form.addEventListener('submit', async (e) => {
-                    e.preventDefault()
-                    const emp_code = form.empid.value
-                    const time_type = form.time_type.value
-                    try {
-                        const res = await fetch('/attendance', {
-                            headers: { 'Content-Type': 'application/json' },
-                            body: JSON.stringify({
-                                emp_code,
-                                time_type
-                            }),
-                            method: 'POST'
-                        })
-                        const data = await res.json()
-                        console.log("DATA", data);
-                        if (data.err) {
-                            altCon.classList.add('con-error')
-                            altLbl.textContent = data.err.email
-                            statusProcessing()
-
-                        }
-                        if (data.log_in) {
-                            altCon.classList.add('con-success')
-                            altLbl.textContent = "SUCCSSFULLY LOGGED IN AT " + date.toLocaleTimeString()
-                            statusProcessing()
-                        }
-                        if (data.log_out) {
-                            altCon.classList.add('con-success')
-                            altLbl.textContent = "SUCCSSFULLY LOGGED OUT AT " + date.toLocaleTimeString()
-                            statusProcessing()
-                        }
-                    } catch (err) {
-                        console.log(err)
-                    }
-                })
-
-                statusProcessing = () => {
-                    btnSubmit.classList.add('btn-disable')
-                    btnSubmit.textContent = "Processing...."
-                    setTimeout(() => {
-                        altLbl.textContent = "Or scan by RFID"
-                        altCon.classList.remove('con-error')
-                        altCon.classList.remove('con-success')
-                        btnSubmit.classList.remove('btn-disable')
-                        btnSubmit.textContent = "Submit"
-                    }, 1500)
-                }
-            </script>
+            <script src="/assets/onscan.min.js"></script>
+            <script src="/scripts/timeMonitoring.js"></script>
 
 
             <%-include('partials/Footer')%>
