added: rfid for attendance

--- a/views/TimeMonitoring.ejs
+++ b/views/TimeMonitoring.ejs
@@ -18,6 +18,7 @@
                         </div>
                         <form>
                             <div class="attendance-component box-shadow components">
+                                <label name="input_type" id="input_type" >as</label>
                                 <select name="time_type" id="time_type">
                                     <option value="timein">Time In</option>
                                     <option value="timeout">Time Out</option>
