we already displayed no of absentees

--- a/views/Payroll.ejs
+++ b/views/Payroll.ejs
@@ -62,8 +62,10 @@
                 // GET ELEMENT OF FIND BUTTON, INITIATE WHEN CLICKED
                 const btnSubmit = document.querySelector('.find')
                 btnSubmit.addEventListener('click', async (e)=>{
-                    fromDate = inputFromDate.value
-                    toDate = inputToDate.value
+                    // fromDate = inputFromDate.value
+                    // toDate = inputToDate.value
+                    fromDate = '2022-07-15'
+                    toDate = '2022-07-25'
                     console.log(fromDate, toDate)
                     console.log(fromDate)
                     console.log(toDate)
