initial holiday exemptions added

--- a/views/Payroll.ejs
+++ b/views/Payroll.ejs
@@ -36,7 +36,7 @@
                             <td><%=records.name%></td>
                             <td><%=records.designation%></td>
                             <td><%=records.salary%></td>
-                            <td><%=records.no_of_days%></td>
+                            <td><%=records.whalf_days%></td>
                             <td><%=records.gross_salary%></td>
                             <td><%=records.no_of_absents%></td>
                             <td><%=records.no_of_undertime%></td>
