--- a/views/Payroll.ejs
+++ b/views/Payroll.ejs
@@ -40,7 +40,7 @@
                             <td><%=records.gross_salary%></td>
                             <td><%=records.no_of_absents%></td>
                             <td><%=records.no_of_undertime%></td>
-                            <td><%=records.salary%></td>
+                            <td><%=records.gross_salary%></td>
                             <td>0</td>
                             <td>0</td>
                         </tr>
