--update: add employee API

--- a/views/Employees.ejs
+++ b/views/Employees.ejs
@@ -16,7 +16,9 @@
                                 </form>
                             </div>
                         </div>
+                        <a href="/admin/employees/add" class="edit">ADD Employee</a>
                         <div class="employee-container components box-shadow">
+                            
                             <table class="employee-table">
                                 <tr>
                                     <th>ID</th>
