--- a/views/TimeMonitoring.ejs
+++ b/views/TimeMonitoring.ejs
@@ -1,6 +1,6 @@
 <%-include('partials/Header')%>
     <%-include('partials/Nav') %>
-        <%-include('partials/public_Aside')%>
+        <%-include('partials/publicAside')%>
 
             <main>
                 <div class="container dashboard">
