--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -371,6 +371,9 @@ input, select, button{
 
 /* EMPLOYEE TABLE */
 .employee-container{
+    width: 100%;
+    padding: 1em 2em;
+    background-color: #ffff;
 }
 
 .employee-table{
