--fixed: payroll date --update: view user api

--- a/views/Employees.ejs
+++ b/views/Employees.ejs
@@ -30,7 +30,7 @@
                                     <th>Position</th>
                                     <th>Actions</th>
                                 </tr>
-                                <% Object.values(data.emp).forEach(user => { %> 
+                                <% Object.values(datas.result).forEach(user => { %> 
                                     <tr>
                                         <td><%=user._id%></td>
                                         <td><%=user.emp_code%></td>
