--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -8,7 +8,7 @@
             <div class="box box-shadow">
                 <div class="total-count">
                     <h1 for="">Total Employees</h1>
-                    <h1><%=data.empC%></h1>
+                    <h1><%=datas.result%></h1>
                 </div>
                 <i class="fa-solid fa-people-group blue-circle blue-bg"></i>
             </div>
