--- a/views/TimeMonitoring.ejs
+++ b/views/TimeMonitoring.ejs
@@ -10,7 +10,7 @@
                                 <label for="date">
                                     <%=currentDate%>
                                 </label>
-                                <label for="time">
+                                <label for="time" class="time">
                                     <%=currentTime%>
                                 </label>
 
