--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -94,6 +94,7 @@ input, select, button{
 .button-submit{
      background-color: #3498db;
      color:#ffff;
+     border-radius: 3px;
 }
 
 .button-submit:hover{
@@ -401,6 +402,48 @@ input, select, button{
 }
 .employee-table tr td:nth-child(1), .employee-table tr td:nth-child(2){
     width: 125px;
+}
+
+/* ADD EMPLOYEE */
+.employee-container .title{
+    font-size: 1.75rem;
+    border-bottom: 1px solid #2f3542;
+    border-radius: 0;
+    padding-bottom: .25em;
+    margin-bottom: .75em;
+}
+
+
+
+.employee-container .addemp-form form .add-emp-section{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 1em 0em 1em;
+    gap: 0 20px;
+}
+.employee-container .addemp-form form .add-emp-section div{
+    display: flex;
+    flex-direction: column;
+}
+.employee-container .addemp-form form .add-emp-section div label.error{
+    font-size: .75rem;
+    font-weight: 300;
+    margin-bottom: 10px;
+    color: #e74c3c
+}
+
+/* add employee --inputs */
+.employee-container .addemp-form form label{
+    color: #2f3542;
+    font-weight: 600;
+    padding-bottom: .5em;
+}
+.employee-container .addemp-form form input[type='text']{
+    padding: .55em .75em;
+    width: 300px;
+}
+.employee-container .addemp-form form .add-emp-btn{
+    padding: .5em 5em;
 }
 
 
